# bevy_toon_shader

./: Cargo.toml  README.md
examples/: scene.rs
src/: lib.rs  toon_shader.wgsl
