[package]
name = "bevy_toon_shader"
version = "0.2.0"
edition = "2021"
categories = ["game-engines", "graphics", "rendering", "game-development"]
keywords = ["gamedev", "graphics", "bevy", "shader", "toon"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Toon shader for the Bevy game engine"
repository = "https://github.com/tbillington/bevy_toon_shader"
homepage = "https://github.com/tbillington/bevy_toon_shader"

[dependencies]
bevy = { version = "0.11", default-features = false, features = [
  "bevy_pbr",
  "bevy_render",
  "bevy_asset",
] }

[dev-dependencies]
bevy = { version = "0.11" }
bevy_egui = "0.21.0"
